--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News App</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="body.css">
     <script src="script.js" defer></script>
+    <script src="body.js" defer></script>
+
   </head>
   <body>
     <nav>
@@ -35,9 +38,30 @@
           <button class="search-button" id="search-button">Search</button>
         </div>
         <div>
-          <button class="sign-btn"><a href="sign.html"> Sign In</a></button>
+          <button class="nav-sign-btn"><a href="sign.html"> Sign In</a></button>
         </div>
       </div>
     </nav>
+
+<!-- Main section  -->
+
+    <main>
+      <div class="cards-container container flex" id="cardscontainer">
+      </div>
+  </main>
+
+  <template id="template-news-card">
+      <div class="card">
+          <div class="card-header">
+              <img src="https://via.placeholder.com/400x200" alt="" id="news-img">
+          </div>
+          <div class="card-content">
+              <h3 id="news-title">This is the Title</h3>
+              <h6 class="news-source" id="news-source"> </h6>
+              <p class="news-desc" id="news-desc">    </p>
+              <button class="add-to-favorites">Add to Favourites</button>
+          </div>
+      </div>
+  </template>
   </body>
 </html>
