--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="footer.html" defer></script>
 
   </head>
+  <script src="https://kit.fontawesome.com/1ce671e465.js"crossorigin="anonymous"></script>
   <body>
     <nav>
       <div class="main-nav container flex">
