--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News App</title>
+    
     <link rel="stylesheet" href="style.css" >
     <link rel="stylesheet" href="body.css">
     <link rel="stylesheet" href="footer.css">
     <script src="script.js" defer></script>
     <script src="body.js" defer></script>
     <script src="footer.html" defer></script>
-
+    
   </head>
+  <script src="https://kit.fontawesome.com/914bb4d28d.js" crossorigin="anonymous"></script>
+
   <body>
     <nav>
       <div class="main-nav container flex">
