--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h3 id="news-title">This is the Title</h3>
         <h6 class="news-source" id="news-source"></h6>
         <p class="news-desc" id="news-desc"></p>
-        <button class="add-to-favorites">Add to Favourites</button>
+        <button class="add-to-favorites">Add to Favourite</button>
       </div>
     </div>
   </template>
